--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
   </header>
   <main>
     <section class="logo-container">
-      <img src="./assets/intuit-logo.png" alt="intuit accounts logo">
+      <div class="main-logo">
+        <img src="./assets/intuit-logo.png" alt="intuit accounts logo">
+      </div>
       <div class="partner-logos">
         <a href="https://www.mint.com/" target="_blank">
-          <img src="./assets/mint-logo.svg" alt="mint.com icon">
-          <img src="./assets/mint-text.svg" alt="mint.com logo text">
+          <img class="icon" src="./assets/mint-logo.svg" alt="mint.com icon">
+          <img class="mint-text" src="./assets/mint-text.svg" alt="mint.com logo text">
         </a>
         <a href="https://quickbooks.intuit.com/" target="_blank">
-          <img src="./assets/quickbooks-logo.svg" alt="quickbooks icon">
-          <img src="./assets/quickbooks-text.svg" alt="quickbooks logo text">
+          <img class="icon" src="./assets/quickbooks-logo.svg" alt="quickbooks icon">
+          <img class="qb-text" src="./assets/quickbooks-text.svg" alt="quickbooks logo text">
         </a>
         <a href="https://turbotax.intuit.com/" target="_blank">
-          <img src="./assets/turbotax-logo.svg" alt="turbotax icon">
-          <img src="./assets/turbotax-text.svg" alt="turbotax logo text">
+          <img class="icon" src="./assets/turbotax-logo.svg" alt="turbotax icon">
+          <img class="tt-text" src="./assets/turbotax-text.svg" alt="turbotax logo text">
         </a>
       </div>
     </section>
