--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     <section class="form-container">
       <form action="#" method="POST">
         <h1>Create an Intuit Account</h1>
-        <h3>One account for everything Intuit, including Mint.</h3>
-        <a href="https://accounts-help.lc.intuit.com/questions/1582580-creating-an-account"
+        <h3 class="leading-text">One account for everything Intuit, including Mint.
+          <a href="https://accounts-help.lc.intuit.com/questions/1582580-creating-an-account"
           target="_blank"
-        >
-          Learn more
-        </a>
+          >
+            Learn more
+          </a>
+        </h3>
         <h3>
           Already have an account? 
           <a href="https://accounts.intuit.com/index.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Futm_medium%3Ddirect%26cta%3Dhero_sign_up_free_ProspectWeb%26ivid%3D8f90dc11-cc3c-49ad-92b6-086883d98d89%26adobe_mc%3DMCMID%253D38391138743357860120467545780728310845%257CMCAID%253D2F18D70A0515C7E4-40000BED83255DAB%257CMCORGID%253D969430F0543F253D0A4C98C6%252540AdobeOrg%257CTS%253D1580319178%26ivid%3D8f90dc11-cc3c-49ad-92b6-086883d98d89"
