add styling for email address input, phone input, and subtext below phone

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             <li>
               <label>
                 Email address
-                <input type="email" name="email" required>
+                <input class="email-label" type="email" name="email" required>
               </label>
+              <!-- <p class="temp">insert error stuff</p> -->
             </li>
             <li>
               <label>
