--- a/index.html
+++ b/index.html
@@ -79,19 +79,21 @@
           <img src="./assets/locked.png" alt="locked">
           <span>Create Account</span>
         </button>
-        <p>
+        <p class="terms">
           By clicking Create account, you agree to our 
           <a href="https://www.mint.com/terms" target="_blank">Terms</a>
           and have read and acknowledge our 
           <a href="https://security.intuit.com/privacy" target="_blank">Privacy Statement</a>
         </p>
+      </form>
+      <section class="form-footer">
         <p>
           Invisible reCAPTCHA by Google 
           <a href="https://www.google.com/intl/en/policies/privacy/" target="_blank">Privacy Policy</a>
           and 
           <a href="https://www.google.com/intl/en/policies/terms/" target="_blank">Terms of Use</a>.
         </p>
-      </form>
+      </section>
     </section>
   </main>
   <footer>
