add page footer styles

--- a/index.html
+++ b/index.html
@@ -98,33 +98,33 @@
   </main>
   <footer>
     <nav>
-      <ul>
+      <ul class="footer-list">
         <li>
-          <a href="http://about.intuit.com/legal/" target="_blank">
+          <a class="footer-link" href="http://about.intuit.com/legal/" target="_blank">
             Legal
           </a>
         </li>
         <li>
-          <a href="https://security.intuit.com/privacy/" target="_blank">
+          <a class="footer-link" href="https://security.intuit.com/privacy/" target="_blank">
             Privacy
           </a>
         </li>
         <li>
-          <a href="http://security.intuit.com/" target="_blank">
+          <a class="footer-link" href="http://security.intuit.com/" target="_blank">
             Security
           </a>
         </li>
-      </ul>
+      </ul c>
       <p>© 2020 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, 
         TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.
       </p>
-      <p>
+      <p class="terms-text">
         Terms and conditions, features, support, pricing, and service options subject to change without notice.
       </p>
     </nav>
-    <button>
-      Privacy Settings
-    </button>
   </footer>
+  <button class="privacy-settings">
+    Privacy Settings
+  </button>
 </body>
 </html>
