give top nav a class to prevent styling from applying to bottom nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <nav>
+    <nav class="top-nav">
       <div>
         <p>Already have an Intuit account?</p>
         <a 
