--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Intuit Accounts - Sign Up</title>
-  <link rel="stylesheet" href="../css-reset.css">
+  <!-- <link rel="stylesheet" href="../css-reset.css"> -->
+  <link rel="stylesheet" href="css-reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
